# ufednl

./: .gitignore  LICENSE  README.md  README_1_MIN_TOOLS.md  README_2_EXTRA_TOOLS.md  README_3_BUILD_LOCALLY.md  README_4_BUILD_IN_DOCKER.md  README_5_EXPERIMENTS.md  README_6_BUILTIN_GITHUB_ACTIONS.md  README_7_PROJECT_STRUCTURE.md  README_8_ADVANCED_CONFIGURATIONS.md
docs/: dopt-20MAR2025.chm
dopt/: CMakeLists.txt
dopt/bin_fednl_distr_client/exported/: FedNLClientShared.h  FedNLClientSharedSwig.i
dopt/bin_fednl_distr_client/include/: Args.h  LocalWorkerForFedNL_Identical.h  LocalWorkerForFedNL_Natural.h  LocalWorkerForFedNL_RandK.h  LocalWorkerForFedNL_RandSeqK.h  LocalWorkerForFedNL_TopK.h  LocalWorkerForFedNL_TopLEK.h  Reports.h  TrainCallbaksSharedClient.h  TrainLoop.h  UsedTypes.h
dopt/bin_fednl_distr_client/src/: LocalWorkerForFedNL_RandK.cpp  LocalWorkerForFedNL_TopLEK.cpp  main.cpp  mainShared.cpp
dopt/bin_fednl_distr_client_pp/exported/: FedNLClientSharedPP.h  FedNLClientSharedSwigPP.i
dopt/bin_fednl_distr_client_pp/include/: Args.h  LocalWorkerForFedNL_Identical.h  LocalWorkerForFedNL_Natural.h  LocalWorkerForFedNL_RandK.h  LocalWorkerForFedNL_RandSeqK.h  LocalWorkerForFedNL_TopK.h  LocalWorkerForFedNL_TopLEK.h  LocalWorkerForGD.h  TrainCallbaksSharedClientPP.h  TrainLoop.h  UsedTypes.h
dopt/bin_fednl_distr_client_pp/src/: LocalWorkerForFedNL_Identical.cpp  main.cpp  mainShared.cpp
dopt/bin_fednl_distr_master/: CMakeLists.txt
dopt/bin_fednl_distr_master/exported/: FedNLMasterShared.h  FedNLMasterSharedSwig.i
dopt/bin_fednl_distr_master/include/: Args.h  TrainCallbaksSharedMaster.h  TrainLoop.h  UsedTypes.h
dopt/bin_fednl_distr_master/src/: main.cpp  mainShared.cpp
dopt/bin_fednl_distr_master_pp/exported/: FedNLMasterSharedPP.h  FedNLMasterSharedPPSwig.i
dopt/bin_fednl_distr_master_pp/include/: Args.h  TrainCallbaksSharedMasterPP.h  TrainLoop.h  UsedTypes.h
dopt/bin_fednl_distr_master_pp/src/: TrainLoop.cpp  main.cpp  mainShared.cpp
dopt/bin_fednl_local/: CMakeLists.txt
dopt/bin_fednl_local/exported/: FedNLLocalShared.h  FedNLLocalSharedSwig.i
dopt/bin_fednl_local/include/: Args.h  LocalWorkerForFedNL_Identical.h  LocalWorkerForFedNL_Natural.h  LocalWorkerForFedNL_Natural_Dithering.h  LocalWorkerForFedNL_RandK.h  LocalWorkerForFedNL_RandSeqK.h  LocalWorkerForFedNL_TopK.h  LocalWorkerForFedNL_TopLEK.h  TrainCallbaksShared.h  TrainLoop.h  UsedTypes.h
dopt/bin_fednl_local/src/: LocalWorkerForFedNL_Natural_Dithering.cpp  main.cpp  mainShared.cpp
dopt/bin_fednl_local_pp/: CMakeLists.txt
dopt/bin_fednl_local_pp/exported/: FedNLPPLocalShared.h  FedNLPPLocalSharedSwig.i
dopt/bin_fednl_local_pp/include/: Args.h  LocalWorkerForFedNL_Identical.h  LocalWorkerForFedNL_Natural.h  LocalWorkerForFedNL_RandK.h  LocalWorkerForFedNL_RandSeqK.h  LocalWorkerForFedNL_TopK.h  LocalWorkerForFedNL_TopLEK.h  LocalWorkerForGD.h  TrainLoop.h  TrainPPCallbaksShared.h  UsedTypes.h
dopt/bin_fednl_local_pp/src/: LocalWorkerForFedNL_Natural.cpp  LocalWorkerForFedNL_RandSeqK.cpp  LocalWorkerForFedNL_TopK.cpp  LocalWorkerForGD.cpp  main.cpp  mainShared.cpp
dopt/bin_split/: CMakeLists.txt
dopt/bin_split/include/: Args.h  Reports.h  SplitLoop.h
dopt/bin_split/src/: SplitLoop.cpp  main.cpp
dopt/bin_tests/: CMakeLists.txt
dopt/bin_tests/src/: approximate_sigmoid_test.cpp  main.cpp
dopt/bin_tests/src/cmdline/: CmdLineParserGTest.cpp
dopt/bin_tests/src/copier/: BitsDataGTest.cpp  CopierGTest.cpp  DataGTest.cpp  MutableBitsDataGTest.cpp  MutableDataGTest.cpp
dopt/bin_tests/src/fs/: FileNameHelpersGTest.cpp  FileSystemHelpersGTest.cpp  StringUtilsGTest.cpp
dopt/bin_tests/src/linalg_linsolvers/: ElementaryMatTransformsGTest.cpp  LinaglSolversGTest.cpp
dopt/bin_tests/src/linalg_matrices/: CUDAMatrixNMDGTest.cpp  CUDASpecialMatrixFunctionsGTest.cpp  CholeskyFactorizationGTest.cpp  MatrixNMDGTest.cpp  QrFactorizationGTest.cpp
dopt/bin_tests/src/linalg_vectors/: LightVectorNDGTest.cpp  VectorNDGTest.cpp  VectorSimdTraitsGTest.cpp
dopt/bin_tests/src/math_routines/: MinHeapIndexedGTest.cpp  SimpleMathRoutinesGTest.cpp  TernaryTrieGTest.cpp
dopt/bin_tests/src/optimization_problems/: CompressorsBenchmarkTest.cpp  LogisticRegressionGTest.cpp  SymmetricQuadraticsGTest.cpp
dopt/bin_tests/src/random/: MathStatisticGTest.cpp  RandomGenIntegerLinearGTest.cpp  RandomGenMerseneGTest.cpp  RandomGenRealLinearGTest.cpp  RandomGenXorShiftGTest.cpp  RandomVariableGTest.cpp  ShuffleSequenceGTest.cpp
dopt/bin_tests/src/system/: CrcGTest.cpp  FloatUtilsGTest.cpp  Md5GTest.cpp  MemoryPoolGTest.cpp  MutexGTest.cpp  SystemMemoryAllocateGTest.cpp  TasksBufferLockFreeGTest.cpp  TasksBufferMtGTest.cpp  ThreadPoolWithTaskQueueGTest.cpp  ThreadsGTest.cpp
dopt/bin_tests/src/timers/: HiPrecTimerGTest.cpp
dopt/datasets/: my_gen_big.txt  my_gen_middle.txt  my_gen_small.txt
dopt/dopt/cmdline/include/: CmdLineParser.h
dopt/dopt/cmdline/src/: CmdLineParser.cpp
dopt/dopt/copylocal/include/: BitsData.h  Copier.h  Data.h  MutableBitsData.h  MutableData.h
dopt/dopt/copylocal/src/: BitsData.cpp  Copier.cpp  Data.cpp  MutableBitsData.cpp  MutableData.cpp
dopt/dopt/fs/include/: FileNameHelpers.h  FileSystemHelpers.h  StringUtils.h
dopt/dopt/fs/src/: FileNameHelpers.cpp  FileSystemHelpers.cpp
dopt/dopt/gpu_compute_support/: CMakeLists.txt
dopt/dopt/gpu_compute_support/include/: CUDASpecialMathRoutinesForMatrix.h  CudaDevicesManagement.h  CudaRuntimeHelpers.h
dopt/dopt/linalg_vectors/: CMakeLists.txt
dopt/dopt/optimization_problems/: CMakeLists.txt
dopt/dopt/random/: CMakeLists.txt
dopt/dopt/system/: CMakeLists.txt
dopt/scripts/: project_scripts.py
dopt/scripts/cmake/: DoptVersionGit.cmake  HelpFunctions.cmake  ToolChainConfiguration.cmake
dopt/scripts/doxygen/: doxygen.conf  doxygen_clean.py  doxygen_generate.py
dopt/scripts/gnu_gcc_coverage/: launch_code_coverage.sh
dopt/utils/bin_cuda_view/: CMakeLists.txt
dopt/utils/bin_host_view/: CMakeLists.txt
dopt/utils/bin_opencl_view/: CMakeLists.txt
dopt/utils/bin_opt_problem_generator/: CMakeLists.txt
(+260 files in other folders)
